디자인 수정사항 레이아웃 반영. Interactive하게 만드는 작업 필요

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -83,6 +83,9 @@ body {
 
 .container {
   height: 100%;
+  width: 960px;
+  margin: auto;
+  padding: 0;
 }
 
 /* Responsive: Portrait tablets and up */
