img 누락된거 추가

--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -68,7 +68,7 @@
     .contents
       p.text-black.text-bold Welcome to Tomoni, the first activity-based discovery app!
       p.text-black Connect around activities in your neighborhood.
-    .bottom-line(style="border-bottom: solid 1px #333;")
+    .bottom-line
 
 .page-container.page-2
   .page-left
@@ -79,8 +79,10 @@
       p.content.text-regular Just drop a tomo where you ans to hang out.
   .page-right
     .content-container
-      img(src="../images/illu/illu1_bg.png")
-  .bottom-line(style="border-bottom: solid 1px #333;")
+      .img-area
+        img.drop1(src="../images/illu/illu1_parachute.png")
+        img.drop2(src="../images/illu/illu1_shadowdrop.png")
+  .bottom-line
 
 #page-3.page-container.page-3
   .page-left
@@ -91,7 +93,7 @@
     .content-container
       p.title.text-light Drop and discover<br />tomos around you.
       p.content.text-regular Tomo filters keep content interesting to you.
-  .bottom-line(style="border-bottom: solid 1px #333;")
+  .bottom-line
 
 #page-4.page-container.page-4
   .page-left
@@ -104,7 +106,7 @@
         img.chat1(src="../images/illu/illu3_chat1.png")
         img.chat2(src="../images/illu/illu3_chat2.png")
         img.chat3(src="../images/illu/illu3_chat3.png")
-  .bottom-line(style="border-bottom: solid 1px #333;")
+  .bottom-line
 
 #page-5.page-container.page-5
   .page-left
@@ -116,7 +118,7 @@
       .img-area
         img.fb(src="../images/illu/illu4_fb.png")
         img.twt(src="../images/illu/illu4_tw.png")
-  .bottom-line(style="border-bottom: solid 1px #333;")
+  .bottom-line
 
 #page-6.page-container.page-6
   .header
