--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -330,11 +330,11 @@ p {
   width: 65%;
   height: 1px;
   margin: auto;
-  border-bottom: solid 3px #babcbe;
+  border-bottom: solid 2px #babcbe;
 }
 
 .page-2 {
-  margin-top: 800px;
+  margin-top: 780px;
   .page-left {
     .content-container {
       margin-top: 250px;
@@ -346,6 +346,22 @@ p {
     .content-container {
       padding-top: 100px;
       height: 700px;
+      .img-area {
+        width: 400px;
+        height: 600px;
+        position: relative;
+        background-image: url("../images/illu/illu1_bg.png");
+        .drop1 {
+          position: absolute;
+          left: 152px;
+          top: 33px;
+        }
+        .drop2 {
+          position: absolute;
+          left: 198px;
+          top: 171px;
+        }
+      }
     }
   }
 }
@@ -461,9 +477,9 @@ p {
 }
 
 .page-6 {
-  height: 617px;
+  height: 685px;
   .header {
-    margin-top: 68px;
+    padding-top: 68px;
     width: 100%;
     text-align: center;
     p.text-light {
