--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -2,6 +2,24 @@
 body {
   font-family: 'Open Sans', sans-serif;
   padding: 0;
+  background-color: rgba(241, 241, 242, 0.7);
+}
+
+#cloud-container {
+  background-color: rgba(241, 241, 242, 0.7);
+}
+
+.container {
+  background-color: rgba(241, 241, 242, 0.7);
+}
+
+#background {
+  float: center;
+  position: fixed;
+  z-index: -1;
+  background-color: rgba(241, 241, 242, 0.7);
+  width: 100%;
+  height: 100%;
 }
 
 ul {
@@ -59,7 +77,7 @@ p {
   width: 100%;
   background-color: #ffffff;
   height: 60px;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #828282;
   font-weight: 400;
   font-size: 1.25em;
   z-index: 999;
@@ -80,7 +98,7 @@ p {
       margin: 0;
       width: 500px;
       nav.menu {
-        border-right: 1px solid #333;
+        border-right: 1px solid #d2d2d2;
         float: left;
         width: 270px;
         margin: 0;
@@ -100,7 +118,7 @@ p {
         }
       }
       .social {
-        border-right: 1px solid #333;
+        border-right: 1px solid #d2d2d2;
         width: 114px;
         height: 60px;
         float: left;
@@ -115,7 +133,7 @@ p {
       .language {
         width: 114px;
         height: 60px;
-        padding-top: 5px;
+        padding-top: 8px;
         float: left;
         .dropdown {
           a {
@@ -214,6 +232,7 @@ p {
   padding-top: 60px;
   width: 100%;
   position: absolute;
+  background-color: rgba(241, 241, 242, 0.7);
   left: 0;
   .maps {
     position: absolute;
@@ -229,17 +248,13 @@ p {
       position: absolute;
       width: 100%;
       height: 450px;
-      img {
-        filter: alpha(opacity=70);
-        opacity: 0.7;
-      }
     }
   }
   div.tomos {
     position: absolute;
     width: 100%;
     height: 423px;
-    margin-top: 50px;
+    margin-top: 70px;
     .popup-area {
       position: relative;
       width: 960px;
@@ -340,6 +355,7 @@ p {
   }
 
   .page-1 {
+    background-color: rgba(241, 241, 242, 0.7);
     width: 960px;
     margin: auto;
     margin-top: 580px;
@@ -391,11 +407,13 @@ p {
           position: absolute;
           left: 152px;
           top: 0px;
+          z-index: 10;
         }
         #drop2 {
           position: absolute;
           left: 218px;
           top: 151px;
+          z-index: 5;
         }
       }
     }
