nav border 삐져나온거 수정

--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -97,14 +97,16 @@ p {
     .header-right {
       margin: 0;
       width: 500px;
+      height: 60px;
       nav.menu {
-        border-right: 1px solid #d2d2d2;
         float: left;
         width: 270px;
         margin: 0;
         padding: 0;
+        border-right: 1px solid #d2d2d2;
+        height: 60px;
         ul.navi_menu {
-          padding-top: 15px;
+          margin-top: 15px;
           display: block;
           height: 60px;
           li.menu_item {
