add users photo

--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -272,6 +272,11 @@ p {
           height: 243px;
           border: 0;
           margin-left: -135px;
+          img.profile_img {
+            position: absolute;
+            top: 11px;
+            left: 85px;
+          }
           p {
             width: 240px;
             margin: auto;
@@ -566,7 +571,8 @@ p {
   background-color: #404041;
   height: 60px;
   .bottom-content {
-    width: 260px;
+    min-width: 260px;
+    max-width: 310px;
     height: 50px;
     margin: auto;
     padding: 15px;
