--- a/app/views/main.jade
+++ b/app/views/main.jade
@@ -39,27 +39,32 @@
     .popup-area
       .popups
         .popup.popup-1(ng-show="show_popups[0]")
-          p.name jordan
-          p.message enhoying happy hour, 5-7!
+          img.profile_img(src="../images/popup/Kyeongsik.png")
+          p.name Kyeongsik
+          p.message enjoying happy hour, 5-7!
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-2(ng-show="show_popups[1]")
-          p.name jordan
-          p.message enhoying happy hour, 5-7!
+          img.profile_img(src="../images/popup/marisa2.png")
+          p.name Marisa
+          p.message enjoying happy hour, 5-7!
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-3(ng-show="show_popups[2]")
-          p.name jordan
-          p.message enhoying happy hour, 5-7!
+          img.profile_img(src="../images/popup/Nestor.png")
+          p.name Nestor
+          p.message enjoying happy hour, 5-7!
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-4(ng-show="show_popups[3]")
-          p.name jordan
-          p.message enhoying happy hour, 5-7!
+          img.profile_img(src="../images/popup/jordan2.png")
+          p.name Jordan
+          p.message enjoying happy hour, 5-7!
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
         .popup.popup-5(ng-show="show_popups[4]")
-          p.name jordan
+          img.profile_img(src="../images/popup/Momo.png")
+          p.name Momo
           p.message enhoying happy hour, 5-7!
           .bottoms
             p.notice {{ 'COMINGSOON' | translate }}
