bottom width 조정

--- a/app/styles/page.less
+++ b/app/styles/page.less
@@ -571,8 +571,7 @@ p {
   background-color: #404041;
   height: 60px;
   .bottom-content {
-    min-width: 260px;
-    max-width: 310px;
+    width: 260px;
     height: 50px;
     margin: auto;
     padding: 15px;
